	     Updated patch jbd-stats-2.6.9.patch
	     Updated patch qsnet-rhel4-2.6.patch
	     Updated patch quota-deadlock-on-pagelock-core.patch
	     Updated patch vfs_intent-2.6-rhel4.patch
	     Updated patch vfs_races-2.6-rhel4.patch
	     Updated series file 2.6-rhel4-titech.series
	     Updated series file 2.6-rhel4.series
	     Updated kernel config files

Severity   : normal
Frequency  : when qunit size is too small(less than 20M)
Bugzilla   : 12588
Description: write is stopped by improper -EDQUOT
Details    : If the master is busy and qunit size is small enough(let's say 1M), 
	     the slave can not get quota from master on time, which will lead 
	     slave to trigger a -EQUOTA to client.

Severity   : normal
Frequency  : rare
Bugzilla   : 12629
Description: Deadlock during metadata tests
Details    : in prune_dir_dentries(), shrink_dcache_parent() should not be
             called with the per-dentry lock held.

Severity   : normal
Frequency  : SLES9 only
Bugzilla   : 12744
Description: Lustre patched kernel for SLES9 SP3 has NR_CPUS set to 8
Details    : set CONFIG_NR_CPUS to 128 instead of 8.

Severity   : enhancement
Bugzilla   : 12678
Description: remove fs_prep_san_write operation and related patches
Details    : remove the ext3-san-jdike patches which are no longer useful.

Severity   : normal
Frequency  : rare
Bugzilla   : 11324
Description: LDISKFS-fs error (device sdc): ldiskfs_free_blocks
Details    : a disk corruption can cause the mballoc code to assert on a
	     double free.

Severity   : enhancement
Bugzilla   : 12194
Description: add optional extra BUILD_VERSION info
Details    : add a new environment variable (namely LUSTRE_VERS) which allows
	     to override the lustre version.

Severity   : normal
Frequency  : 2.6.18 servers only
Bugzilla   : 12546
Description: ll_kern_mount() doesn't release the module reference
Details    : The ldiskfs module reference count never drops down to 0