@@ -136,6 +136,7 @@ struct lustre_quota_ctxt {
                       lqc_atype:2,      /* Turn on user/group quota at setup automatically, 
                                          * 0: none, 1: user quota, 2: group quota, 3: both */
                       lqc_status:1;     /* Quota status. 0:Off, 1:On */
+        spinlock_t    lqc_lock;         /* guard lqc_imp_valid now */
         unsigned long lqc_iunit_sz;     /* Unit size of file quota */
         unsigned long lqc_itune_sz;     /* Trigger dqacq when available file quota less than
                                          * this value, trigger dqrel when available file quota
@@ -197,6 +198,9 @@ typedef struct {
         
         /* For quota slave, set import, trigger quota recovery */
         int (*quota_setinfo) (struct obd_export *, struct obd_device *);
+        
+        /* For quota slave, clear import when relative import is invalid */
+        int (*quota_clearinfo) (struct obd_export *, struct obd_device *);
         
         /* For quota slave, set proper thread resoure capability */
         int (*quota_enforce) (struct obd_device *, unsigned int);
@@ -362,6 +366,18 @@ static inline int lquota_setinfo(quota_interface_t *interface,
 
         QUOTA_CHECK_OP(interface, setinfo);
         rc = QUOTA_OP(interface, setinfo)(exp, obd);
+        RETURN(rc);
+}
+
+static inline int lquota_clearinfo(quota_interface_t *interface,
+                                   struct obd_export *exp, 
+                                   struct obd_device *obd) 
+{
+        int rc;
+        ENTRY;
+
+        QUOTA_CHECK_OP(interface, clearinfo);
+        rc = QUOTA_OP(interface, clearinfo)(exp, obd);
         RETURN(rc);
 }
 
